--- a/CV_Projekt/CV_Projekt/Views/Search/SearchWindow.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Search/SearchWindow.cshtml
@@ -42,7 +42,7 @@
         }
     } else {
         <div class="d-flex justify-content-center align-items-center">
-            <i class="fa-solid fa-poo" style="font-size: 100px; color: #ff6219;"></i>
+            <i class="fa-magnifying-glass" style="font-size: 100px; color: #ff6219;"></i>
         </div>
     }
 </div>
