--- a/CV_Projekt/CV_Projekt/Views/Message/AllUserList.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/AllUserList.cshtml
@@ -1,5 +1,7 @@
 ﻿@model UserViewModel
 
+<h2>Vem vill du skriva till?</h2>
+
 @foreach (Message u in Model._users)
 {
                 <div class"card">
@@ -8,7 +10,8 @@
                               style="background-color:#ff6219; margin-bottom:2rem;"
                               asp-controller="Meddelande"
                               asp-action="Add"
-                              asp-route-senderId=""
+                              //Användaren!!!
+                              asp-route-senderId="@ViewBag.Id"
                               asp-route-receiverId="@u.id">
                               @u.FirstName @u.LastName 
                    </a>
