--- a/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
@@ -1,21 +1,33 @@
 ﻿@model ChatListViewModel
 
 <h2>Inkorg</h2>
-@foreach (var message in Model.RecievedMessages)
+<h3>Olästa Meddelanden</h3>
+@foreach (var message in Model.ReceivedMessages)
 {
-    <h3> Från: @message.Sender.FirstName @message.Sender.LastName </h3>
-    <h4> @message.Subject</h4>
-    <a class="btn btn-primary text-light"
-       style="background-color:#ff6219; margin-bottom:2rem;"
-       asp-controller="Chat"
-       asp-action="Chat11"
-       asp-route-senderId="@message.SenderId"
-       asp-route-receiverId="@message.ReceiverId">
-        Visa Meddelande
-    </a>
+    <div class="card">
+        <h3> Från: @message.Sender.FirstName @message.Sender.LastName </h3>
+        <h4> @message.Subject</h4>
+        <a class="btn btn-primary text-light"
+           style="background-color:#ff6219; margin-bottom:2rem;"
+           asp-controller="Chat"
+           asp-action="Chat11"
+           asp-route-senderId="@message.SenderId"
+           asp-route-receiverId="@message.ReceiverId">
+           Visa Meddelande
+        </a>
+    </div>
 }
 
-<br />
+<a class="btn btn-primary text-light"
+           style="background-color:#ff6219; margin-bottom:2rem;"
+           asp-controller="Message"
+           asp-action="AllUserList"
+           asp-route-id="@ViewBag.Id">
+           Skriv Nytt Meddelande
+        </a>
+
+
+@* <br />
 <h2>Skickade meddelanden</h2>
 @foreach (var message in Model.SentMessages)
 {
@@ -29,4 +41,4 @@
        asp-route-receiverId="@message.ReceiverId">
         Visa Meddelande
     </a>
-}
+} *@
