--- a/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfile.cshtml
@@ -11,7 +11,7 @@
                                  alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
                                  style="width: 150px; z-index: 1">
                             <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
-								<i class="fa-solid fa-gear"></i> <a asp-controller="Account" asp-action="Settings">Ändra Profil</a>
+								<i class="fa-solid fa-gear"></i> <a asp-controller="Account" asp-action="Settings" asp-rout-id="@Model.User.Id">Ändra Profil</a>
                             </button>
                             <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
                                 <i class="fa-solid fa-file-circle-plus"></i>
@@ -125,6 +125,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </section>
