--- a/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ChatListViewModel
 
-<h2>Inkorg</h2>
-<h3>Olästa Meddelanden</h3>
+<h2 style="color:#FFF;">Inkorg</h2>
+<h3 style="color:#FFF;">Olästa Meddelanden</h3>
 @foreach (var message in Model.ReceivedMessages)
 {
     <div class="card">
