--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 @if(User.Identity.IsAuthenticated)
 {
-    <h1>Välkommen @User.Identity.Name!</h1>
+    <h1>Välkommen @Model.LoggedInUser.FirstName!</h1>
 }
 
 <br />
