--- a/CV_Projekt/CV_Projekt/Views/Message/AllUserList.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/AllUserList.cshtml
@@ -8,7 +8,7 @@
 
                     <a  class="btn btn-primary text-light"
                               style="background-color:#ff6219; margin-bottom:2rem;"
-                              asp-controller="Meddelande"
+                              asp-controller="Message"
                               asp-action="Add"
                               asp-route-senderId="@ViewBag.Id"
                               asp-route-receiverId="@user.Id">
