--- a/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfile.cshtml
@@ -11,7 +11,7 @@
                                  alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
                                  style="width: 150px; z-index: 1">
                             <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
-								<i class="fa-solid fa-gear"></i> <a asp-controller="Account" asp-action="Settings" asp-rout-id="@Model.User.Id">Ändra Profil</a>
+								<i class="fa-solid fa-gear"></i> <a asp-controller="Account" asp-action="Settings" asp-route-id="@Model.User.Id">Ändra Profil</a>
                             </button>
                             <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
                                 <i class="fa-solid fa-file-circle-plus"></i>
@@ -25,8 +25,8 @@
                             </button>
                         </div>
                         <div class="ms-3" style="margin-top: 130px;">
-                            <h5>Model.User.FirstName Model.User.LastName</h5>
-                            <p>Model.User.ContactInformation.Email</p>
+                            <h5>@Model.User.FirstName @Model.User.LastName</h5>
+                            <p>@Model.User.UserName</p>
                         </div>
                     </div>
                     <div class="p-4 text-black bg-body-tertiary">
@@ -50,34 +50,37 @@
                             <p class="lead fw-normal mb-1">Kontaktinformation</p>
                             <div class="p-4 bg-body-tertiary">
                                 
-                                <p class="font-italic mb-1">Model.User.ContactInformation.Address</p>
-                                <p class="font-italic mb-1">Model.User.ContactIformation.Phone</p>
+                                <p class="font-italic mb-1">@Model.User.ContactInformation.Address</p>
+                                <p class="font-italic mb-1">@Model.User.ContactInformation.Phone</p>
                                 
                             </div>
                             <div class="row-cols-1">
                                 <div class="card col mb-2">
                                     <div class="card-body" style="background-color: dimgray; color: lightgray" >
                                         <h5 class="card-header bg-dark" style="text-align:center;">Mitt CV</h5>
-                                        <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Arbetslivserfarenhet</h6>
-                                        <!-- foreach(var expWork in Model.Experience.Work) { -->
-                                        <p class="card-text">expWork.Title</p>
-                                        <p class="card-text">expWork.Description</p>
-                                       <!-- } -->
-                                        <p class="card-text">Livet</p>
-                                        <p class="card-text">Avtalat</p>
-                                        <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Utbildning</h6>
-                                        <!-- foreach(var expEdu in Model.Experience.Education) { -->
-                                        <p class="card-text">expEdu</p>
-                                        <!-- } -->
-                                        <p class="card-text">Fiskmåsskolan</p>
-                                        <p class="card-text">Dagis</p>
-                                        <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Annan Erfarenhet</h6>
-                                        <!-- foreach(var expOther in Model.Experience.Work) { -->
-                                        <p class="card-text">expOther</p>
-                                        <!-- } -->
-                                        <p class="card-text">Extra Text</p>
-                                        <p class="card-text">Jag är en gummibåt</p>
-                                        <p class="card-text">Min mor är en häst</p>
+                                         
+                                        @foreach(var exp in Model.Experiences) { 
+                                            @if(exp is Work work)
+                                            {
+                                                <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Arbetslivserfarenhet</h6>
+                                                <p class="card-text">@work.Location</p>
+                                                <p class="card-text">@work.Description</p>
+                                            }
+                                            @if (exp is Education edu)
+                                            {
+                                                <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Utbildning</h6>
+                                                <p class="card-text">@edu.Location</p>
+                                                <p class="card-text">@edu.Program</p>
+                                                <p class="card-text">@edu.Level</p>
+                                                <p class="card-text">@edu.Description</p>
+                                            }
+                                            @if (exp is OtherExperience oe)
+                                            {
+                                                <h6 class="card-header" style="background-color:#ff6219; text-align:center;">Annan Erfarenhet</h6>
+                                                <p class="card-text">@oe.Location</p>
+                                                <p class="card-text">@oe.Type</p>
+                                            }
+                                        } 
                                     </div>
 
                             </div>
@@ -86,41 +89,46 @@
                             <p class="lead fw-normal mb-0">Mina Projekt</p>
                             <p class="mb-0"><a href="#!" class="text-muted">Visa alla</a></p>
                         </div>
-                        <div class="row g-2">
-                            <div class="card col mb-2">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1"
-                                     class="card-img-top w-100 rounded-3">
-                                     <div class="card-body">
-                                         <p class="card-text">Model.Projekt.Title</p>
-                                         <p class="card-text">Model.Projekt.Description</p>
-                                     </div>
-                            </div>
-                            <div class="col mb-2">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp" alt="image 1"
-                                     class="card-img-top w-100 rounded-3">
-                                <div class="card-body">
-                                    <p class="card-text">Model.Projekt.Title</p>
-                                    <p class="card-text">Model.Projekt.Description</p>
+                        <div class="container">
+                            @foreach (var proj in Model.ProjectCollaborator)
+                            {
+                                <div class="row g-2">
+                                <div class="card col mb-2">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1"
+                                         class="card-img-top w-100 rounded-3">
+                                         <div class="card-body">
+                                             <p class="card-text">@proj.Title</p>
+                                             <p class="card-text">@proj.Description</p>
+                                         </div>
+                                </div>
+                                <div class="col mb-2">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp" alt="image 1"
+                                         class="card-img-top w-100 rounded-3">
+                                    <div class="card-body">
+                                            <p class="card-text">@proj.Title</p>
+                                            <p class="card-text">@proj.Description</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row g-2">
-                            <div class="col">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(108).webp" alt="image 1"
-                                     class="card-img-top w-100 rounded-3">
-                                <div class="card-body">
-                                    <p class="card-text">Model.Projekt.Title</p>
-                                    <p class="card-text">Model.Projekt.Description</p>
+                            <div class="row g-2">
+                                <div class="col">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(108).webp" alt="image 1"
+                                         class="card-img-top w-100 rounded-3">
+                                    <div class="card-body">
+                                                <p class="card-text">@proj.Title</p>
+                                                <p class="card-text">@proj.Description</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(114).webp" alt="image 1"
+                                         class="card-img-top w-100 rounded-3">
+                                    <div class="card-body">
+                                                <p class="card-text">@proj.Title</p>
+                                                <p class="card-text">@proj.Description</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(114).webp" alt="image 1"
-                                     class="card-img-top w-100 rounded-3">
-                                <div class="card-body">
-                                    <p class="card-text">Model.Projekt.Title</p>
-                                    <p class="card-text">Model.Projekt.Description</p>
-                                </div>
-                            </div>
+                            }
                         </div>
                     </div>
                 </div>
