--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -60,7 +60,9 @@
                                     <a class="dropdown-item text-black" href="/Search/SearchWindow"><i class="fa-solid fa-magnifying-glass text-black"></i>Sök</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item text-black" href="#">
+                                    <a class="dropdown-item text-black" asp-controller="Message" asp-action="ChatList" asp-route-id=""                            asp-route-id="1">
+                                Visa Meddelanden
+                                </a></div>>
                                         <i class="fa-solid fa-envelope text-black position-relative">
                                             <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">1</span>
                                         </i>
