snyggade till index lite

--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -130,7 +130,10 @@
 
 
 <div class="d-flex justify-content-center mt-2">
-    <a asp-controller="Project" asp-action="Add" class="btn text-light" style="background-color:#ff6219; margin:1rem;">Gå till projektsida</a>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <a asp-controller="Project" asp-action="Add" class="btn text-light" style="background-color:#ff6219; margin:1rem;">Skapa nytt projekt</a>
+    }
 
     @if(!User.Identity.IsAuthenticated)
     {
