--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -146,10 +146,20 @@
         </form>
     }
 </div>
-<div><a  class="btn btn-primary text-light"
-                                style="background-color:#ff6219; margin-bottom:2rem;"
-                                asp-controller="Message"
-                                asp-action="ChatList"
-                                asp-route-id="1">
-                                Visa Meddelanden
-                                </a></div>
+<div>
+    <a  class="btn btn-primary text-light"
+    style="background-color:#ff6219; margin-bottom:2rem;"
+    asp-controller="Message"
+    asp-action="ChatList"
+    asp-route-id="1">
+        Visa Meddelanden
+    </a>
+</div>
+<div>
+    <a class="btn btn-primary text-light"
+       style="background-color:#ff6219; margin-bottom:2rem;"
+       asp-controller="Project"
+       asp-action="ShowProjectsView">
+        Visa Projekt
+    </a>
+</div>
