Revert "Merge branch 'linnea'"
This reverts commit c90849268d69ee7277e04c0dd8471b9abd7081a4, reversing
changes made to ebf3db44dfd087b032297314b92283c9e81afe10.

--- a/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
@@ -33,7 +33,7 @@
 @foreach (Message mess in @Model.SentMessages)
 {
     <div class="card">
-            <h4>Till: @mess.Receiver.FirstName   @mess.Receiver.LastName</h4>
+            <h4>Till: @mess.Sender.FirstName   @mess.Sender.LastName</h4>
         <h4> @mess.Subject</h4>
         <h5> @mess.Content</h5>
     </div>
