--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -143,4 +143,10 @@
         </form>
     }
 </div>
-
+<div><a  class="btn btn-primary text-light"
+                                style="background-color:#ff6219; margin-bottom:2rem;"
+                                asp-controller="Message"
+                                asp-action="ChatList"
+                                asp-route-id="1">
+                                Visa Meddelanden
+                                </a></div>
