--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -95,30 +95,29 @@
     <div class="row justify-content-center">
         <div class="col-md-4">
                 <div class="card">
-                    @foreach(var proj in Model.Projects)
+                    @if(Model.LatestProject !=null)
                     {
-                        var projectOwner = Model.Users.FirstOrDefault(u => u.Id == proj.CreatorId);
+                        @* var projectOwner = Model.Users.FirstOrDefault(u => u.Id == proj.CreatorId); *@
                         <div class="card-body position-relative">
-                        <div class="card-header">@proj.Title</div>
-                        <div class="card-text">@proj.Description</div>
+                        <div class="card-header">@Model.LatestProject.Title</div>
+                        <div class="card-text">@Model.LatestProject.Description</div>
                         <div class="card-text fw-light">Datum:</div>
-                        <div class="card-text fw-light">Start: @proj.StartDate.ToString("yy-MM-dd") Slut: @proj.EndDate.ToString("yy-MM-dd")</div>
-                        <div class="card-text fw-light">Projektägare:</div>
-                        @if (projectOwner != null) 
+                        <div class="card-text fw-light">Start: @Model.LatestProject.StartDate.ToString("yy-MM-dd") Slut: @Model.LatestProject.EndDate.ToString("yy-MM-dd")</div>
+                        @* <div class="card-text fw-light">Projektägare:</div> *@
+                        @* @if (projectOwner != null) 
                         {
                             <div class="card-text fw-light">@projectOwner.FirstName @projectOwner.LastName</div>
                         } else {
                             <div class="card-text fw-light">Ingen projektägare hittades.</div>
-                        }
+                        } *@
                         </div>
                     }
                     <div class="text-center">
-                        @* Placeholder för en länk som skall leda till projektet *@
-                        <a href="#" class="btn text-light"
+                        <a  class="btn text-light"
                             style="background-color:#ff6219; margin-bottom:2rem;"
-                        @* asp-controller="Profile"
-                        asp-action="Index"
-                        asp-route-id="@()" *@>
+                        asp-controller="Project"
+                        asp-action="Project"
+                        asp-route-id="@Model.LatestProject.Id">
                         Visa detta projekt
                         </a>
                     </div>
@@ -160,6 +159,6 @@
        style="background-color:#ff6219; margin-bottom:2rem;"
        asp-controller="Project"
        asp-action="ShowProjectsView">
-        Visa Projekt
+        Visa Alla Projekt
     </a>
 </div>
