--- a/CV_Projekt/CV_Projekt/Views/Project/ShowProjectsView.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Project/ShowProjectsView.cshtml
@@ -36,6 +36,15 @@
             } else {
                 <p class="card-text">Inga deltagare hittades</p>
             }
+                    <div class="text-center">
+                        <a class="btn text-light"
+                           style="background-color:#ff6219; margin-bottom:2rem;"
+                           asp-controller="Project"
+                           asp-action="Project"
+                           asp-route-id="@proj.Id">
+                            Visa detta projekt
+                        </a>
+                    </div>
         }
     </div>
 </div>
