--- a/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
@@ -12,6 +12,7 @@
                         </div>
                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-5 text-black">
+                                <div asp-validation-summary="All" class="text-danger">here there be errors</div>
 
                                 <form method="post" asp-action="LogIn">
 
